# krock1_NHY

./: README.md
Krock1_Demo/: CMakeLists.txt  main.cpp
Krock1_Demo/Driver/include/: control_table_constants.hpp  gamepad.hpp  robot.h  yaml.hpp
Krock1_Demo/Driver/source/: gamepad.cpp  robot.cpp  yaml.cpp
Krock1_Demo/Task/include/: README.md  main.h
Krock1_Demo/Task/source/: README.md
krock_1/: CMakeLists.txt
krock_1/src/: group_bulkread.cpp  group_bulkread1.cpp  main.cpp
test_folder/Dynamixel_test/: CMakeLists.txt
test_folder/Dynamixel_test/src/: group_bulkread.cpp  group_syncwrite.cpp  thread_create.cpp
test_folder/log_test/: CMakeLists.txt  main.cpp
test_folder/log_test/log/: Log.cpp  Log.h
test_folder/single_leg_demo/: CMakeLists.txt  main.cpp
test_folder/single_leg_demo/application/locomotion_plan/include/: gait_parameters.hpp  single_leg_controller.hpp
test_folder/single_leg_demo/application/locomotion_plan/source/: initial.cpp  kinematics.cpp  legPhaseDynamics.cpp  leg_traj_generator.cpp  parameterConfig.cpp  run_step.cpp  set_get_position.cpp
test_folder/single_leg_demo/application/servo_driver/include/: musclemodel.h  yaml_read.h
test_folder/single_leg_demo/application/servo_driver/source/: musclemodel.cpp  robot.cpp  yaml_read.cpp
test_folder/single_leg_demo/config/: muscle.yaml  parametercofig.yaml
test_folder/single_leg_demo/logData/0922112832/: log_spring.csv
test_folder/single_leg_demo/logData/0922113117/: log_spring.csv
test_folder/single_leg_demo/logData/0922113144/: log_spring.csv
test_folder/single_leg_demo/tools/log/: FileOperator.cpp  FileOperator.h  Log.cpp
test_folder/single_leg_demo/tools/utils/: utils.cpp  utils.hpp
test_folder/sping_model_test/: .CMakeLists.txt.swp  CMakeLists.txt
test_folder/sping_model_test/config/: config.yaml  global.yaml  muscle.yaml  parametercofig.yaml
test_folder/sping_model_test/include/: control_table_constants.hpp  musclemodel.h  robot.h  yaml_read.h
test_folder/sping_model_test/logData/0921104656/: log_spring.csv
test_folder/sping_model_test/logData/0921104832/: log_spring.csv
test_folder/sping_model_test/src/: main.cpp  musclemodel.cpp  robot.cpp  yaml_read.cpp
test_folder/sping_model_test/temp/: main.cpp  single_leg_control.cpp
test_folder/sping_model_test/utils/log/: Log.cpp
test_folder/src/: group_bulkread.cpp  ping_test.cpp
test_folder/yaml_cpp_test/: CMakeLists.txt
test_folder/yaml_cpp_test/config/: global.yaml
test_folder/yaml_cpp_test/src/: main.cpp
